--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "aphrodisiac": "^0.3.0",
     "flow-bin": "^0.33.0",
+    "lodash": "^4.16.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
