--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "aphrodisiac": "^0.3.0",
+    "dexie": "^v2.0.0-beta.3",
     "flow-bin": "^0.33.0",
     "lodash": "^4.16.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=7777 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
