add mobx integration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dexie": "^v2.0.0-beta.3",
     "flow-bin": "^0.33.0",
     "lodash": "^4.16.4",
+    "mobx": "^2.6.0",
+    "mobx-react": "^3.5.8",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
