--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "react": "^15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-three-renderer": "^2.3.3",
     "react-vis": "^0.6.4",
-    "three": "0.79.0"
+    "three": "^0.82.1"
   },
   "scripts": {
     "start": "PORT=7777 react-scripts start",
