--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "three-orbit-controls": "^82.1.0"
   },
   "scripts": {
-    "start": "PORT=7777 react-scripts start",
+    "start": "NODE_PATH=./src PORT=7777 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
