--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "devDependencies": {
     "npm-check": "^5.4.0",
-    "react-scripts": "^0.9.0"
+    "react-scripts": "^2.1.3"
   },
   "dependencies": {
-    "aphrodisiac": "^1.0.0",
+    "aphrodite": "^2.2.3",
     "bezier-easing": "^2.0.3",
     "dexie": "^v2.0.0-beta.3",
     "flow-bin": "^0.38.0",
@@ -29,5 +29,11 @@
     "eject": "react-scripts eject",
     "flow": "./node_modules/.bin/flow",
     "update-dependencies": "yarn npm-check -- -u"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
