--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "cube",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://howardjing.github.io/cube",
   "devDependencies": {
-    "npm-check": "^5.4.0",
+    "gh-pages": "^2.0.1",
     "react-scripts": "^2.1.3"
   },
   "dependencies": {
@@ -23,12 +24,13 @@
     "three-orbit-controls": "^82.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "NODE_PATH=./src PORT=7777 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "flow": "./node_modules/.bin/flow",
-    "update-dependencies": "yarn npm-check -- -u"
+    "flow": "./node_modules/.bin/flow"
   },
   "browserslist": [
     ">0.2%",
